corrected floating news overlap

--- a/app/assets/stylesheets/components/its-news.scss
+++ b/app/assets/stylesheets/components/its-news.scss
@@ -60,7 +60,6 @@
 				margin-bottom:  8px; 
 				font-size:  13.5px; 
 				display:  flex; 
-				max-width:  120px; 
 			} 
 		}
 	}
@@ -82,6 +81,8 @@
 }
 
 @media screen and (max-width:  1260px) {
-
+	.floating-news {
+		display:  none; 
+	}
 
 }
